# Wallpaper-Explorer

./: .dockerignore  BUILD_DOCKER_SUMMARY.md  BUILD_FIX_SUMMARY.md  BUILD_SUCCESS_SUMMARY.md  BUILD_SYSTEM_SUMMARY.md  BUILD_VERIFICATION.txt  Cargo.toml  Dockerfile  INSTALLER_SUMMARY.md  README.md  build.rs  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: development-guidelines.mdc  project-overview.mdc  testing-and-deployment.mdc  wallpaper-engine-integration.mdc
.github/: README.md
.github/workflows/: build-windows.yml  test-build.yml
docs/: ARCHITECTURE.md  Build-Guide.md  PROJECT_STRUCTURE.md  Windows-Installer-Guide.md
scripts/: build-windows.sh  build.sh  dev.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: mod.rs  wallpaper_grid.rs
src/models/: mod.rs  wallpaper.rs
src/services/: mod.rs  thumbnail_service.rs  wallpaper_service.rs
src/ui/: main_window.rs  mod.rs
src/utils/: file_utils.rs  image_utils.rs  mod.rs
tests/: integration_tests.rs
ui/: app-window.slint
