[package]
name = "Wallpaper-Explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
slint = "1.11.0"
toml = "0.8.22"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.11.0"
